--- a/views/index.pug
+++ b/views/index.pug
@@ -19,15 +19,6 @@ block mainContent
     |         
     |         
     #phyFile(style="margin: 60px;")
-      style(type="text/css").
-        thead tr{
-        background-color: rgba(220, 240, 252, 0.425);
-        text-align: center;
-        table-layout: auto;
-        border:black;
-        font-size: 20px;
-        color:rgb(6, 2, 32);
-        }
       |  
       |                 
       |             
@@ -35,62 +26,84 @@ block mainContent
         h1 profileTitle
         |
         table(border="1", style="border:3px solid;border-top-color:rgb(161, 39, 9); border-right-color: rgb(204, 121, 27);border-bottom-color: rgb(138, 30, 30);border-left-color:rgb(143, 60, 65);border-style:groove; box-shadow:0px 6px 6px grey")
-          thead(style="background-color: brown")
+          thead()
             tr
               th picture
               |                                 
-              th Years as a physician
+              th gender
               |                                 
-              th Clinic
+              th status
               |                                 
-              th Accept new patients?
+              th clinic
               |                                 
-              th Contact
+              th address
+              |                                 
+              th telephone
+              |
+              th specialty
           |                         
           tbody
             tr
-              td
-                img(src=src, alt="physician1", width="280px")
+              td(id='picture')
+                img(src=src, alt="physician1", width="180px")
               |                                 
-              td 10
+              td(id='gender')
               |                                 
-              td Taylor Street
+              td(id='status') On the Register
               |                                 
-              td Yes
-              |                                 
-              td 306-111-2222
-      |                 
-      br
-      |                 
-      a(href="speciality.html") Good areas
-      |  
-      |                 
-      a(href="/comments") Comments
-      |  
-      |                 
-      a(href="/appointment") Make an appointment
-      |  
-      |                 
-      a(href="http://www.cps.sk.ca/imis/CPSS/Complaints/complaints.aspx?ComplaintsCCO=The%20Complaints%20Process%20Overview", ;="", target="new")
-        | Complain
+              td(id='clinic') Victory Medical Associates
+              |                         
+              td(id='address')
+              |        
+              td(id='telephone') 306-111-2222
+              |
+              td(id='specialty') Hematology
+        |                 
+        br
+        | 
+        div                
+          a(id='comments' href="/comments") Comments
+          |  
+          |                 
+          a(id='appointment' href="/appointment") Make an appointment
+          |  
+          |                 
+          a(id='complain' href="http://www.cps.sk.ca/imis/CPSS/Complaints/complaints.aspx?ComplaintsCCO=The%20Complaints%20Process%20Overview", ;="", target="new")
+            | Complain
     |
     |
     ul.hallImg_show.clearfix
      each doc in documents
-      li
+      li(onclick=`
+         $('#phyFile1>h1').text('${doc.name}')
+         $('#phyFile1 #picture>img').attr('src','${doc.image}')
+         $('#phyFile1 #gender').text('${doc.gender}') 
+         $('#phyFile1 #status').text('${doc.status}')
+         $('#phyFile1 #clinic').text('${doc.clinic}')
+         $('#phyFile1 #address').text('${doc.address}')
+         $('#phyFile1 #address').text('${doc.telephone}')`)
         a(href="#")
-          img(class="physician" alt=doc.index src=doc.image)
+          img(class="physician" alt=doc.index src=doc.image gender=doc.gender status=doc.status clinc=doc.clinc address=doc.address telephone=doc.telephone)
           ins=`Dr. ${doc.name}`
       
-    
-//-  script.
-    fetch('mongodb://localhost:27017')
+//-    -const array=documents
+    div #{array[0].name}
+    -const i=document.querySelector('#hall_show>ul>li')
+    - li.get(0).onclick=function(){document.querySelector('#phyFile1').show();} 
 
+  script.
     let li = $('#hall_show>ul>li');
-    let phyFile = $('#phyFile');
+    let phyFile = $('#phyFile1');
     console.log(li.get(0));
     for (let i = 0; i < li.length; i++) {
     li.get(i).onclick = function () {
-    $('#phyFile1>h1').text(doc[i].name);
+    $('#phyFile1').show();
+    $('#phyFile1>h1').text($(this).text());
+    $('#phyFile1 #picture>img').attr('src',$(this).find('img').attr('src'));
+    $('#phyFile1 #gender').text($(this).find('img').attr('gender'));
+    $('#phyFile1 #status').text($(this).find('img').attr('status'));
+    $('#phyFile1 #clinic').text($(this).find('img').attr('clinic'));
+    $('#phyFile1 #address').text($(this).find('img').attr('address'));
+    $('#phyFile1 #telephone').text($(this).find('img').attr('telephone'));
     }
     }
