--- a/views/appointment.pug
+++ b/views/appointment.pug
@@ -13,8 +13,8 @@ block mainContent
       | appointment
   |         
   p
-    | Here you can make,modify and cancell your appointment. Please confirm with the norms of individual
-    a(href="/ClinicInfo", style="color:chocolate") clinic
+    | Here you can make,modify and cancell your appointment. Please conform with the norm of individual
+    a(href="/clinicInfo", style="color:chocolate")  clinic
     | .
     |             
     br
