--- a/views/index.pug
+++ b/views/index.pug
@@ -83,9 +83,11 @@ block mainContent
          $('#phyFile1 #address').text('${doc.address}')
          $('#phyFile1 #address').text('${doc.telephone}')`)
         a(href="#")
-          img(class="physician" alt=doc.index src=doc.image gender=doc.gender status=doc.status clinc=doc.clinc address=doc.address telephone=doc.telephone)
+          img(class="physician" alt=doc.index src=doc.image)
           ins=`Dr. ${doc.name}`
-      
+        
+
+
 //-    -const array=documents
     div #{array[0].name}
     -const i=document.querySelector('#hall_show>ul>li')
