send confirm email successfully after submit appointment form

--- a/views/appointment.pug
+++ b/views/appointment.pug
@@ -196,7 +196,7 @@ block mainContent
       // content
       p Your appointment information:<br><br>
       ul
-      p <br>Please print it out or save it in your cellphone and present it to the receptionist when you get there.
+      p <br>An email has been sent to you. Please print it out or save it in your cellphone. You may need to present it to the receptionist when you get there.
         | 
     | 				
     .m-bottom
