--- a/views/appointment.pug
+++ b/views/appointment.pug
@@ -247,7 +247,7 @@ block mainContent
       // content
       p Your appointment information:<br><hr><br>
       ul
-      p <br>An email has been sent to you. Please print it out or save it in your cellphone. You may need to present it when you get the clinic.
+      p <br>MOCK:An email has been sent to you. Please print it out or save it in your cellphone. You may need to present it when you get the clinic.
         | 
     | 				
     .m-bottom
