--- a/views/layout.pug
+++ b/views/layout.pug
@@ -123,7 +123,8 @@ html(xmlns="http://www.w3.org/1999/xhtml")
             span
         |             
         li
-          a.adv_payment(href="http://www.cps.sk.ca/imis/CPSS/Complaints/complaints.aspx?ComplaintsCCO=The%20Complaints%20Process%20Overview", target="_blank")
+          //- href="http://www.cps.sk.ca/imis/CPSS/Complaints/complaints.aspx?ComplaintsCCO=The%20Complaints%20Process%20Overview", target="_blank"
+          a.adv_payment(href="/complaints")
             ins
             | Complaints
             span
