--- a/public/css1/appointment.css
+++ b/public/css1/appointment.css
@@ -1,20 +1,21 @@
 #hall_show .show_title{height:120px;background:url(../img/appointmentpage.jpg) 120px 0px no-repeat #586c90}
 
-/*Below is for about the FORM*/  
+/*Below is for the BOOK APPOINTMNET FORM*/  
 	   .entry-container>.entry-container-inner .center {
 		   max-width: 700px;
 	   }
 
 	   form#new_entry,form#cancelAppointment{
-		   margin-left:0px;
-		   background-color:#e1e6d2;
+			 margin-left:0px;
+			 font-family: sans-serif;
+		   background-color:rgba(19, 35, 47, 0.9);
 		   max-width: 700px;
 		   border-width: 0;
 		   border-color: rgb(230, 182, 62);
 	   }
 		div.form-header{
 		   background-color: white;
-		   color:#87d3b7;
+		   color:#1ab188;
 		   text-align: center;
 		   font-family: fantasy;
 		   font-style: italic;
@@ -28,9 +29,28 @@
 	   label.field-label{
 		  font-size: 18px;
 		  font-weight:400;
-		  font-family:Arial, Helvetica, sans-serif;
-		  color: brown;
-	   }
+		  font-family:'Titillium Web', sans-serif;
+		  color: aquamarine;
+		 }
+		 input.gd-btn{
+			border: 0;
+			outline: none;
+			border-radius: 0;
+			padding: 5px 0;
+			margin-bottom:10px;
+			font-size: 1.5rem;
+			font-weight: 600;
+			text-transform: uppercase;
+			letter-spacing: .1em;
+			background: #1ab188;
+			color: #ffffff;
+			-webkit-transition: all 0.5s ease;
+			transition: all 0.5s ease;
+			-webkit-appearance: none;
+		 }
+		 input#delete{
+			 margin:5px;
+		 }
 	   .m-modal{
 		font-size: 16px;
 		font-family:'Times New Roman', Times, serif
@@ -68,7 +88,6 @@
 	  }
 	  .tabs a {
 		background-color: #eff0f2;
-		border-bottom: 1px solid #fff;
 		color: #888;
 		font-weight: 500;
 		display: block;
@@ -79,7 +98,6 @@
 		-webkit-transition: all 0.2s ease-in-out;
 		-moz-transition: all 0.2s ease-in-out;
 		transition: all 0.2s ease-in-out;
-		border-bottom: 2px solid #87d3b7;
 	  }
 	  
 	  .tabs_item {
@@ -89,7 +107,7 @@
 	  .tabs_item h4 {
 		font-weight: bold;
 		color: #87d3b7;
-		font-size: 20px;
+		font-size: 30px;
 	  }
 	  .tabs_item img {
 		width: 50px;
@@ -103,7 +121,8 @@
 	  
 	  .current a {
 		color: #fff;
-		background: #87d3b7;
+		font-size:15px;
+		background: #1ab188;
 	  }
 
 /*Below is for search result of 'Cancel appointment' page*/
