--- a/views/layout.pug
+++ b/views/layout.pug
@@ -85,7 +85,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
               |                         
               li(data-id="2") Search Phsician
               |                         
-              li(data-id="3") 新闻动态
+              li(data-id="3") ****
           |                 
           form(method="get", action="Search.html", onsubmit="return Kunyi.CheckSearchForm()")
             input#Type(type="hidden", name="Type", value="1")
@@ -119,7 +119,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
         li
           a.adv_transfer(href="/comments")
             ins
-            | Comments and rating
+            | Comments and Rating
             span
         |             
         li
@@ -154,7 +154,7 @@ html(xmlns="http://www.w3.org/1999/xhtml")
                 i
                 |                             
                 .t Donation
-            |                     
+            |
             .per-3.per
               a(target="_blank", href="")
                 i
