--- a/views/appointment.pug
+++ b/views/appointment.pug
@@ -9,7 +9,6 @@ block headComplement
   script(src="/js1/appointment.js")
   script(type="text/javascript" src="/js1/jquery.my-modal.1.1.min.js")
 
-
 block mainContent
  #hall_show.wrap
   .show_title
@@ -28,7 +27,7 @@ block mainContent
     a(href="/contactus", style="color: peru") Contact US.
   |     
   |
-  .tab
+  #appointment.tab
     ul.tabs
       li
         a(href="#") Book appointment
