--- a/public/css1/index.css
+++ b/public/css1/index.css
@@ -41,11 +41,11 @@ body {
   #subNav .wrap{width:1002px;}
   #subNav a{display:block;width:167px;height:67px;text-align:center;color:#9c9a9a;padding-top:13px}
   #subNav a:hover{text-decoration:none}
-  #subNav a ins{display:block;width:52px;height:40px;margin:0 auto;background:url(../images/souche_sprite2.jpg) no-repeat 10px -334px}
+  #subNav a ins{display:block;width:52px;height:40px;margin:0 auto;max-height:40px;background:url('/img') no-repeat 10px -334px}
   #subNav a span{position:absolute;width:20px;height:20px}
   #subNav a:hover,#subNav .adv_active a{background-color:rgb(121, 11, 93);color:#fff}
-  #subNav a:hover ins,#subNav .adv_active ins{background:url(../images/souche_service1.png) no-repeat 10px -190px}
-  #subNav a:hover span,#subNav .adv_active span{background:url(../images/souche_png.png) no-repeat 0 -90px;left:76px;bottom:-10px;_background:none}
+  #subNav a:hover ins,#subNav .adv_active ins{background:url('/img') no-repeat 10px -190px}
+  #subNav a:hover span,#subNav .adv_active span{background:url('/img') no-repeat 0 -90px;left:76px;bottom:-10px;_background:none}
   #subNav .adv_source ins{background-position:-49px -334px}
   #subNav .adv_price ins{background-position:-101px -334px}
   #subNav .adv_transfer ins{background-position:-155px -334px}
@@ -67,16 +67,53 @@ body {
   #brand_affect,#hall_show,#alpha_price,#checkCar,#rideCar,#quality_promise,#stockFinance,#ourInfo,#sellFlow
   {background-color:#fff;margin-bottom:20px;border:1px solid #d9d9d9}
   
-  #hall_show{padding-bottom:5px}
+  #hall_show{padding-bottom:5px;max-height:1200px}
   #hall_show .show_title{height:120px;background:url(../img/frontpage.jpg) 120px 0px no-repeat #586c90}
   #hall_show .show_title h1{font-size:25px;color:rgb(157, 188, 224);text-shadow:2px 2px 5px gray;background-color:maroon;margin-left:0px;margin-right:700px;padding-top:0px;padding-left:60px}
   #hall_show p{color:#444;font-size:18px;padding-top:35px;line-height:1.8em;font-family:"\5FAE\8F6F\96C5\9ED1",Tahoma,Verdana;width:966px;margin:0 auto;margin-bottom:15px}
-  #hall_show p ins{color:red;font-size:24px}  /*#ff4301*/
-  .hallImg_show{padding-left:5px}
-  .hallImg_show li{float:left;margin:5px;position:relative;}
-  .hallImg_show ins{position:absolute;left:0;bottom:0;width:100%;zoom:1;line-height:0.5em;padding:15px 0;background-color:rgba(0,0,0,0.5);font-family:"\5FAE\8F6F\96C5\9ED1",Tahoma,Verdana;color:#fff;text-align:center;font-size:10px}
+  #hall_show p ins{color:red;font-size:24px;height:auto}  /*#ff4301*/ 
+  .hallImg_show{display:block;padding-left:5px;}
+  .hallImg_show .item{float:left;margin:5px;position:relative;}
+  .hallImg_show ins{position:absolute;left:0;bottom:0;width:100%;zoom:1;line-height:9px;padding:10px 0;background-color:rgba(0,0,0,0.5);font-family:"\5FAE\8F6F\96C5\9ED1",Tahoma,Verdana;color:#fff;text-align:center;font-size:10px;height:auto}
 
-li img{
+
+	::-webkit-scrollbar {
+		width: 0px;
+
+  }
+
+::-webkit-scrollbar-track {
+	background-color:grey;
+} /* 滚动条的滑轨背景颜色 */
+
+::-webkit-scrollbar-thumb {
+	background-color: rgba(0, 0, 0, 0.2); 
+} /* 滑块颜色 */
+
+::-webkit-scrollbar-button {
+	background-color: #7c2929;
+} /* 滑轨两头的监听按钮颜色 */
+
+::-webkit-scrollbar-corner {
+	background-color: grey;
+} /* 横向滚动条和纵向滚动条相交处尖角的颜色 */
+
+  div.hallImg_show{
+	border: 0.5px solid rgb(167, 134, 221);
+	border-radius: 5px;
+	background:rgb(245, 245, 220);
+	max-width:880px;
+	max-height:116px;
+	width: 1000px; height: 210px; 
+	overflow-x:scroll;
+	overflow-y:hidden;
+	margin-left:30px;
+}
+div.hallImg_show .container-inner{
+	width: 10000px;
+}
+
+.item img{
     height:80px;
     border: 1px solid rgb(204, 134, 221);
     margin-left: 20px;
@@ -86,9 +123,63 @@ li img{
     border-radius: 10px;
 }
 
-li img:hover {
+.item img:hover {
     box-shadow:2px 2px 16px 1px rgba(0,0,0,0.75);
   }
+
+#searchPhysician{
+	margin-top:10px;
+	margin-left:30px;
+	display: flex;
+	justify-content: left;
+	flex:1;
+	flex-basis: 0.000000001px;
+	font-size: 15px;
+    font-family: Roboto, Arial, sans-serif;
+}
+
+.nameSearch,.langSearch,.specSearch{
+	border: 1px solid rgb(24, 6, 75);
+	-webkit-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
+	-moz-box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
+	box-shadow: 0 1px 1px #ddd inset, 0 1px 0 #FFF;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+    color: black;
+	float: left;
+	font: 16px Lucida Sans, Trebuchet MS, Tahoma, sans-serif;
+	margin-left:3px
+}
+	
+.nameSearch:focus,.langSearch:focus,.specSearch:focus{
+	border-color: rgb(187, 10, 99);
+	-webkit-box-shadow: 0 1px 1px #bbb inset;
+	-moz-box-shadow: 0 1px 1px #bbb inset;
+	box-shadow: 0 1px 1px #bbb initial;
+	outline: 0;
+}
+
+input.searchPhysician{
+	cursor: pointer;
+    width: 55px;
+    height: 23px;
+    border: 1px solid;
+	background-color:darkcyan;
+	color:white;
+	border-radius: 0 2px 2px 0;
+	margin-left:3px
+}
+
+input.searchPhysician:hover{
+background:darkred;
+}
+
+input.searchPhysician:active{
+    box-shadow:1px 1px 1px 1px rgba(0,0,0,0.75);
+	}
+
+#phyFile{display:block;margin-top:20px;margin-left:30px}
 
 #phyFile h1{
 	font-family: fantasy;
@@ -97,11 +188,11 @@ li img:hover {
 }
 
 #phyFile1 thead tr {
-        background-color: rgb(8, 8, 151);
+        background-color: rgba(8, 8, 151, 0.41);
         text-align: center;
         table-layout: auto;
         border:darkblue;
-		font-size: 22px;
+		font-size: 18px;
 		font-family: fantasy;
 		font-weight:1;
         color:white;
@@ -111,12 +202,15 @@ li img:hover {
         background-color: rgba(220, 240, 252, 0.425);
         text-align: center;
         table-layout: auto;
-        border:black;
+		border:black;
+		font: 16px Lucida Sans, Trebuchet MS, Tahoma, sans-serif;
         font-size: 16px;
         color:rgb(6, 2, 32);
 		}
 
-#phyFile1 #comments,#phyFile1 #appointment,#phyFile1 #complain{
+td#status{width:90px}
+
+#phyFile1 #more,#phyFile1 #comments,#phyFile1 #appointment,#phyFile1 #complain{
 	background-color: rgba(220, 240, 252, 0.425);
         text-align: center;
 		table-layout: auto;
@@ -126,10 +220,15 @@ li img:hover {
         font-size: 16px;
 }
 
-#phyFile1 #comments:hover,#phyFile1 #appointment:hover, #phyFile1 #complain:hover{
+#phyFile1 #more:hover,#phyFile1 #comments:hover,#phyFile1 #appointment:hover, #phyFile1 #complain:hover{
 	text-decoration: none;
 	background-color:#480d8b;
 	color:white;
+}
+
+td img{
+	max-height:150px;
+	max-width:150px;
 }
 
 td#clinic{
@@ -219,3 +318,4 @@ td#clinic>a:hover{
 	color: #666;
 	padding: 0 10px
 }
+
