--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,19 +16,17 @@ html(xmlns="http://www.w3.org/1999/xhtml")
     link(rel="stylesheet", href="/css1/index.css", type="text/css")
     |
     link(rel="stylesheet", href="/css1/normalize.css", type="text/css")
-    //
-      <link rel="stylesheet" href="/css1/common.css" type="text/css" />
-      <link rel="style`sheet" href="/css1/inside.css" type="text/css" />
+    |
     script(src="http://code.jquery.com/jquery-3.3.1.min.js", integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=", crossorigin="anonymous")
-    |     
+    |
     script(lang="javascript", src="/js1/index.js")
+    |
+    script(language="javascript", type="text/javascript", src="/js1/KunyiHTML5.min.js")
+    |     
+    script(language="javascript", type="text/javascript", src="/js1/Kunyilibrary.js")
     |
     block headComplement
     |     
-    script(language="javascript", type="text/javascript", src="/js/KunyiHTML5.min.js")
-    |     
-    script(language="javascript", type="text/javascript", src="/js/Kunyilibrary.js")
-    |
   body
     header
       .topHidden
